--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -35,7 +35,11 @@
     <% form.label :twitter%>
     <%= form.text_field :twitter ,class:"form-control",placeholder:"Twitter"%>
   </div>
-
+  <div class="mb-3">
+  <% form.label :twitter%>
+  <%= form.number_field :user_id,id: :friend_user_id ,class:"form-control",value:current_user.id,type:"hidden"%>
+  </div>
+  
   <div class="actions">
     <%= form.submit class:"btn btn-success"%>
   </div>
