--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,27 +1,27 @@
+<%if user_signed_in? %>
+
 <table class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Name</th>
       <th>Email</th>
       <th>Phone</th>
       <th>Twitter</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @friends.each do |friend| %>
+      <%if friend.user_id == current_user.id %>
       <tr>
-        <td><%= friend.first_name %></td>
-        <td><%= friend.last_name %></td>
+        <td><%= link_to friend.first_name+" "+friend.last_name, friend %>
         <td><%= friend.email %></td>
         <td><%= friend.phone %></td>
         <td><%= friend.twitter %></td>
-        <td><%= link_to 'Show', friend,class:"btn btn-primary" %></td>
-        <td><%= link_to 'Edit', edit_friend_path(friend),class:"btn btn-dark" %></td>
-        <td><%= link_to 'Delete', friend, method: :delete,class:"btn btn-danger", data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', friend, method: :delete,class:"btn btn-outline-danger btn-sm", data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
@@ -29,3 +29,9 @@
 <br>
 
 <%= link_to 'New Friend', new_friend_path, class:"btn btn-secondary"%>
+<% else %>
+
+<h1>Hello WOrld</h1>
+<p>First Ruby on rails app</p>
+
+<%end%>
