--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -5,6 +5,7 @@
   </br>
   <%= link_to 'Edit', edit_friend_path(@friend),class:"btn btn-dark" %> 
 <%= link_to 'Back', friends_path,class:"btn btn-info" %>
+<%= link_to 'Delete', @friend, method: :delete,class:"btn btn-danger", data: { confirm: 'Are you sure?' } %>
 </div>
 
 
